- fix spacing on mobile

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -70,8 +70,12 @@ div.narrowed {
 .method-section {
   margin: 4rem 0 1rem 0;
   @include mixins.from(1024px) {
-    margin: 9rem 0 2rem 0;
+    margin: 6rem 0 2rem 0;
   }
+}
+
+.method-sectitle {
+  padding: 2.2rem 0.75rem 0 0.75rem;
 }
 
 .method-subtitle {
